fix: aligned viewfinder

--- a/styles/Reader.module.css
+++ b/styles/Reader.module.css
@@ -8,8 +8,8 @@
   position: absolute; 
   left: 0; 
   right: 0;
-  top: 50%;
-  margin-left: auto; 
+  top: 40%;
+  margin-left: auto;
   margin-right: auto;
-  width: 200px;
+  width: 250px;
 }
